packages/network/iptables/config/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Fri May 26 22:12:06 2017
*mangle
:PREROUTING ACCEPT [164:11997]
:INPUT ACCEPT [164:11997]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [99:10665]
:POSTROUTING ACCEPT [114:12690]
COMMIT
# Completed on Fri May 26 22:12:06 2017
# Generated by iptables-save v1.6.0 on Fri May 26 22:12:06 2017
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [5:393]
:POSTROUTING ACCEPT [5:393]
COMMIT
# Completed on Fri May 26 22:12:06 2017
# Generated by iptables-save v1.6.0 on Fri May 26 22:12:06 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.0.0.0/8 -m state --state NEW -j ACCEPT
-A INPUT -s 172.16.0.0/12 -m state --state NEW -j ACCEPT
-A INPUT -s 192.168.0.0/16 -m state --state NEW -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A OUTPUT -m state --state NEW -j ACCEPT
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Fri May 26 22:12:06 2017
